[tool.poetry]
name = "spoqa-requests-backoff"
version = "0.1.1"
description = "Backoff Session for requests"
authors = ["Spoqa Creators <dev@spoqa.com>"]
maintainers = ["rusty <rusty@spoqa.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/spoqa/requests-backoff"

packages = [
    { include = "spoqa_requests_backoff.py" },
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"

backoff = "^1.10.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
"backports.functools_lru_cache" = "!=1.6.2,!=1.6.3" # https://github.com/jaraco/backports.functools_lru_cache/pull/16
flake8 = "^3.8.4"
flake8-import-order-spoqa = "^1.5.0"
pytest = "^4.6"
pytest-flake8 = "^1.0.7"
pytest-mock = "^1.3"
requests-mock = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
